[package]
name = "RustPathFinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-channel = "1.6.1"
futures-util = "0.3.19"
log = "0.4"
redis = { version = "0.21.5", features = ["tokio-comp"] }
tokio = { version = "1.13", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
zmq = "0.9.2"