[package]
name = "PathFinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-channel = "1.6.1"
bitvec = { version = "1.0.0", features = ["serde"]}
csv = "1.1.6"
csv-async = { version = "1.2.4", features = ["tokio", "with_serde"]}
futures-util = "0.3.19"
log = "0.4"
redis = { version = "0.21.5", features = ["tokio-comp"] }
rust-s3 = "0.28.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.13", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
zmq = "0.9.2"


[lib]
name = "PathFinder"
path = "src/library/lib.rs"